Minor visual fixes
-Repalce princess.png with .svg due to poor .png quality
-Fix SMM-Button_Vk border loss on hover+focus

--- a/app/sass/blocks/SMM.scss
+++ b/app/sass/blocks/SMM.scss
@@ -30,6 +30,7 @@
     }
 
     &_Vk {
+      border-color: $color-social-vk;
       color: $color-social-vk;
       font: bold 30px/1 'Tahoma', sans-serif;
 
