--- a/app/sass/blocks/Share.scss
+++ b/app/sass/blocks/Share.scss
@@ -38,7 +38,7 @@
     font: normal 14px/1 $font-rotonda;
 
     &::after {
-      content: url('../img/princess.png');
+      content: url('../img/svg/princess.svg');
       position: absolute;
       top: -17px;
       right: -3px;
