--- a/app/css/style.css
+++ b/app/css/style.css
@@ -226,7 +226,7 @@ button {
     color: white;
     font: normal 14px/1 "RotondaC", "Arial", sans-serif; }
     .Share-SubmitBtn::after {
-      content: url("../img/princess.png");
+      content: url("../img/svg/princess.svg");
       position: absolute;
       top: -17px;
       right: -3px;
@@ -290,6 +290,7 @@ button {
       .SMM-Button_Twitter:focus {
         border-width: 3px; }
     .SMM-Button_Vk {
+      border-color: #416DA1;
       color: #416DA1;
       font: bold 30px/1 'Tahoma', sans-serif; }
       .SMM-Button_Vk:hover {
